--- a/css/result.css
+++ b/css/result.css
@@ -26,6 +26,16 @@
   border-radius: 20px;
 }
 
+
+.goback{
+  color:black;
+  background-color: lightblue;
+  font-size: 20px;
+  border: 0px;
+  border-radius: 20px;
+}
+
+
 .kakao:hover, .kakao:focus{
   background-color: black;
   color: #FEE500;
@@ -35,7 +45,15 @@
   background-color: black;
   color: whitesmoke;
 }
-.resultDesc, .subtext{
+
+.goback:hover, .goback:focus{
+  background-color: black;
+  color: lightblue;
+}
+
+
+.resultDesc, .subtext, .btn_name, .btn_friend, .friendName{
   font-family: 'DungGeunMo';
+  text-align: center;
   font-size:20px;
 }
