--- a/css/main.css
+++ b/css/main.css
@@ -16,14 +16,11 @@ p{
 }
 
 .txt_name, .txt_friend{
-  font-family: 'DungGeunMo';
-  text-align: center;
-  font-size:20px;
   width:50%;
 }
 
 
-.subtext{
+.subtext, .txt_name, .txt_friend{
   font-family: 'DungGeunMo';
   text-align: center;
   font-size:20px;
