--- a/css/result.css
+++ b/css/result.css
@@ -39,7 +39,7 @@
 }
 
 
-.resultDesc, .friendName{
+.resultDesc, .friendName, .kakao, .goback{
   font-family: 'DungGeunMo';
   text-align: center;
   font-size:20px;
